--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,7 +4,7 @@
     text-decoration:none;
 }
 body{
-    background-image: url(./images/background1.jpg);
+    background-image: url(../images/background1.jpg);
     background-position: center center;
     background-attachment: fixed;
     background-repeat: no-repeat;
